--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -140,5 +140,9 @@
     "mobileWordModeConfirm": "Word mode downloads around {size}. Continue?",
     "mobileWordModeTitle": "Download word set",
     "mobileWordModeCancel": "Not now",
-    "mobileWordModeContinue": "Download"
+    "mobileWordModeContinue": "Download",
+    "words.downloadTitle": "Download Word Set",
+    "words.downloadMessage": "The word set is large",
+    "common.download": "Download",
+    "common.cancel": "Cancel"
 }
