--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -144,5 +144,6 @@
     "words.downloadTitle": "Descargar set de palabras",
     "words.downloadMessage": "El set de palabras es grande",
     "common.download": "Descargar",
-    "common.cancel": "Cancelar"
+    "common.cancel": "Cancelar",
+    "common.next": "Siguiente"
 }
